// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatingLabelInput test1 1`] = `
<div
  className="mb-4"
>
  <FloatingLabelInput__Box>
    <FloatingLabelInput__Input
      error={false}
      multiline={false}
      type="text"
    />
    <FloatingLabelInput__Label />
  </FloatingLabelInput__Box>
  <DefaultInput__Message
    className="my-1"
  >
    <UNDEFINED
      error={false}
      touched={false}
      warning={false}
    />
  </DefaultInput__Message>
</div>
`;

exports[`FloatingLabelInput test2, touched, error - true 1`] = `
<div
  className="mb-4"
>
  <FloatingLabelInput__Box>
    <FloatingLabelInput__Input
      error={
        Object {
          "id": "app.containers.HomePage.title",
        }
      }
      multiline={false}
      type="text"
    />
    <FloatingLabelInput__Label />
  </FloatingLabelInput__Box>
  <DefaultInput__Message
    className="my-1"
  >
    <UNDEFINED
      error={
        Object {
          "id": "app.containers.HomePage.title",
        }
      }
      touched={true}
      warning={false}
    />
  </DefaultInput__Message>
</div>
`;
